src/parser/grammar/test_samples/Invalid/multiple_namespaces.5th
// Negative case: multiple namespace declarations in a single file
namespace First.Namespace;
namespace Second.Namespace;

main(): int {
    return 0;
}
